# jsonrpc-playground

./: .flake8  .gitignore  .pylintrc  README.md  main.py  pyproject.toml  pytest.ini  render.yaml  render_app.py  requirements-deploy.txt  requirements.txt  streamlit_app.py  test_render.py
.github/workflows/: ci.yml
scripts/: run_client.py  run_server.py  run_tests.py
src/jsonrpc_playground/: __init__.py  client.py  main.py  server.py
tests/: __init__.py  test_client.py  test_main.py  test_server.py
